--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+server.port=8080
+spring.jackson.serialization.write-durations-as-timestamps=true
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:h2:file:./db/filmorate
+#spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.url=jdbc:h2:mem:filmorate
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.continue-on-error=true
+spring.h2.console.enabled=true
